// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Button /> > should render a primary button" 1`] = `
<button
  class="sc-dcJsrY bgvNbD"
  title="click me"
  type="button"
>
  button primary
</button>
`;

exports[`<Button /> > should render a secondary button" 1`] = `
<button
  class="sc-dcJsrY bDWePn"
  title="click me"
  type="button"
>
  button secondary
</button>
`;